--- a/localisation/v1_11.csv
+++ b/localisation/v1_11.csv
@@ -1,68 +1,69 @@
-MENU_BAR_GAME_CONVERT;µ¼³öÓÎÏ·;;;;;;;;;;X
-MENU_BAR_GAME_CONVERT_DEL;°ÑÓÎÏ·µ¼³öÖÁÅ·Â½·çÔÆ4;;;;;;;;;;X
-BARBER_TOOLTIP;Àí·¢;;;;;;;;;;X
-RENAME_TITLE_TOOLTIP;Í·ÏÎÖØÃüÃû;;;;;;;;;;X
-CUSTOMIZE_HOUSE_TOOLTIP;×Ô¶¨Òå¼Ò×å;;;;;;;;;;X
-CUSTOMIZE_HOUSE_TOOLTIP_DISABLED;Äã²»ÄÜÑ¡Ôñ¸Ã¼Ò×å£¬ÒòÎªÄã±ØĞë³ÉÎªÆäËùÓĞ³ÉÔ±µÄ×î¸ßÁìÖ÷¡£;;;;;;;;;;X
-c_lappland_adj;À­ÆÕÀ¼;;;;;;;;;;X
-RENAME;ÖØÃüÃû;;;;;;;;;;X
-NAME;ÃüÃû;;;;;;;;;;X
-ADJECTIVE;ĞÎÈİ´Ê;;;;;;;;;;X
-POSSIBLE_PLOT_POWER;¿ÉÄÜÒõÄ±Á¦Á¿;;;;;;;;;;X
-AUTO_INVITE_PLOTTERS;×Ô¶¯ÑûÇëÒõÄ±²ÎÓëÕß;;;;;;;;;;X
-AUTO_STOP_PLOTS;×Ô¶¯ÖÆÖ¹ÒõÄ±;;;;;;;;;;X
-AUTO_STOPPED_PLOT_SETUP;ÒÑ·¢ÏÖµÄÒõÄ±;;;;;;;;;;X
-AUTO_STOPPED_PLOT_LOG;§Y$PLOTTER$§!$PLOTTERJOB$Ïë§Y$PLOTNAME$§!¡£;;;;;;;;;;X
-AUTO_STOPPED_PLOT_LETTER;ÎÒÒÑ·¢ÏÖ$PLOTTER$ÍıÍ¼$PLOTNAME$µÄÃÜÄ±¡£ÎÒÒ²ÒÑÅÉ³öÒ»ÃûÊ¹ÕßÈÃËûÊÕÊÖ¡£\n\nÄãÇ«±°µÄ¼äµı×Ü¹Ü£¬\n$SPYMASTER$;;;;;;;;;;X
-AUTO_STOP_PLOT_START_SETUP;¼äµı×Ü¹ÜÅÉ³öĞÅÊ¹¡£;;;;;;;;;;X
-AUTO_STOP_PLOT_START_LOG;$SPYMASTER$ ÅÉ³öĞÅÊ¹ÖÆÖ¹ÃÜÄ±·¢¶¯Õß;;;;;;;;;;X
-AUTO_STOP_PLOT_START_LETTER;ÎÒÒÑÏòËùÓĞÒÑÖªµÄÃÜÄ±²ÎÓëÕßÅÉ³öÃÜÊ¹£¬ÈÃËûÃÇÁ¢¼´Í£Ö¹ÃÜÄ±¡£\n\nÄãÇ«±°µÄ¼äµı×Ü¹Ü£¬\n$SPYMASTER$;;;;;;;;;;X
-siege_leader;Î§³ÇÖ¸»Ó¹Ù¡£;;;;;;;;;;X
-siege_leader_desc;´Ë½ÇÉ«ÉÆÓÚÖ¸»ÓÎ§³Ç×÷Õ½¡£;;;;;;;;;;X
-SIEGE;Î§³Ç;;;;;;;;;;X
-ADD_IP;Ìí¼ÓIPµØÖ·;;;;;;;;;;X
-REMOVE_IP;Çå³ıIPµØÖ·;;;;;;;;;;X
-PENDING_PLOT_REQUEST;µÈºò´ğ¸²;;;;;;;;;;X
-ACCEPTED_PLOT_REQUEST;ÕıÖ§³ÖÃÜÄ±¡£;;;;;;;;;;X
-LOADING_TIP_52;Äã¿ÉÒÔÊ¹ÓÃAlt¼üµãÑ¡ÌØ¶¨µÄ½¢¶Ó¡£;;;;;;;;;;X
-EXIT;¹Ø±Õ;;;;;;;;;;X
-CUT;¼ô°É£¡;;;;;;;;;;X
-STYLE;ÀàĞÍ;;;;;;;;;;X
-CAN_PERSUADE_TO_JOIN_PLOT;¿ÉÒÔÓÃÒ»´ü½ğ±ÒÊÕÂò;;;;;;;;;;X
-city_job_chancellor_arabic;´óÎ¬Æë¶û;;;;;;;;;;X
-city_job_chancellor_iranian;´óÎ¬Æë¶û;;;;;;;;;;X
-city_job_chancellor_turkish;´óÎ¬Æë¶û;;;;;;;;;;X
-city_job_chancellor_west_african;´óÎ¬Æë¶û;;;;;;;;;;X
-city_job_chancellor_greek;Ì«Ê¦;;;;;;;;;;X
-city_job_spymaster_greek;ÉñÃØÊéÀô;;;;;;;;;;X
-city_job_treasurer_greek;±¦¿â×Ü¹Ü;;;;;;;;;;X
-city_job_chancellor_aztec;ÉßÅ®;;;;;;;;;;X
-city_job_treasurer_aztec;¹±¸³×Ü¹Ü;;;;;;;;;;X
-city_job_spiritual_aztec;´ó¼ÀË¾;;;;;;;;;;X
-city_job_spymaster_aztec;°µµîÊØÎÀ;;;;;;;;;;X
-city_job_marshal_aztec;ÈËÀàÇĞ¸îÕß;;;;;;;;;;X
-city_job_chancellor_zoroastrian_group;°Ù¹ÙÖ®¸®;;;;;;;;;;X
-city_job_treasurer_zoroastrian_group;ÄÚ¸®×Ü¹Ü;;;;;;;;;;X
-city_job_marshal_zoroastrian_group;ÒÁÀ¼Ë¹ÅÁ²¨µÂ;;;;;;;;;;X
-city_job_spiritual_zoroastrian_group;Ä§µ¼Ê¦;;;;;;;;;;X
-city_job_spiritual_zoroastrian;Ä§µ¼Ê¦;;;;;;;;;;X
-city_job_spiritual_christian;¹¬Í¢ÄÁÊ¦;;;;;;;;;;X
-city_job_spiritual_orthodox;½Ì»áÊ×Áì;;;;;;;;;;X
-city_job_spiritual_muslim;¹¬Í¢ÒÁÂêÄ¿;;;;;;;;;;X
-city_job_spiritual_shiite;¹¬Í¢ÄÂÀ­;;;;;;;;;;X
-city_job_spiritual_pagan_group;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_pagan;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_baltic_pagan;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_baltic_pagan_reformed;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_finnish_pagan;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_finnish_pagan_reformed;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_norse_pagan_reformed;ÏÈÖª;;;;;;;;;;X
-city_job_spiritual_norse_pagan;ÏÈÖª;;;;;;;;;;X
-city_job_spiritual_female_norse_pagan_reformed;Å®ÏÈÖª;;;;;;;;;;X
-city_job_spiritual_female_norse_pagan;Å®ÏÈÖª;;;;;;;;;;X
-city_job_spiritual_slavic_pagan;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_slavic_pagan_reformed;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_tengri_pagan;Õ¼²·Ê¦;;;;;;;;;;X
-city_job_spiritual_tengri_pagan_reformed;Õ¼²·Ê¦;;;;;;;;;;X
-EU4ConverterDLC;Å·Â½·çÔÆ4×ª»¯Æ÷;;;;;;;;;;X
-CustomizationPackDLC;¶¨ÖÆ°ü;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+MENU_BAR_GAME_CONVERT;å¯¼å‡ºæ¸¸æˆ;;;;;;;;;;x
+MENU_BAR_GAME_CONVERT_DEL;æŠŠæ¸¸æˆå¯¼å‡ºè‡³æ¬§é™†é£äº‘4;;;;;;;;;;x
+BARBER_TOOLTIP;ç†å‘;;;;;;;;;;x
+RENAME_TITLE_TOOLTIP;å¤´è¡”é‡å‘½å;;;;;;;;;;x
+CUSTOMIZE_HOUSE_TOOLTIP;é€‰æ‹©å®¶æ—;;;;;;;;;;x
+CUSTOMIZE_HOUSE_TOOLTIP_DISABLED;ä½ ä¸èƒ½é€‰æ‹©è¯¥ç‹æœï¼Œå› ä¸ºä½ å¿…é¡»æˆä¸ºå…¶æ‰€æœ‰æˆå‘˜çš„æœ€é«˜é¢†ä¸»ã€‚;;;;;;;;;;x
+c_lappland_adj;æ‹‰æ™®å…°;;;;;;;;;;x
+RENAME;é‡å‘½å;;;;;;;;;;x
+NAME;å‘½å;;;;;;;;;;x
+ADJECTIVE;å½¢å®¹è¯;;;;;;;;;;x
+POSSIBLE_PLOT_POWER;å¯èƒ½éœ€è¦çš„å¯†è°‹ç‚¹æ•°;;;;;;;;;;x
+AUTO_INVITE_PLOTTERS;è‡ªå‘å¯†è°‹å‚ä¸è€…;;;;;;;;;;x
+AUTO_STOP_PLOTS;è‡ªå‘åœæ­¢å¯†è°‹;;;;;;;;;;x
+AUTO_STOPPED_PLOT_SETUP;å¯†è°‹è¢«æ­å‘;;;;;;;;;;x
+AUTO_STOPPED_PLOT_LOG;Â§Y$PLOTTER$Â§!$PLOTTERJOB$æƒ³Â§Y$PLOTNAME$Â§!.;;;;;;;;;;x
+AUTO_STOPPED_PLOT_LETTER;æˆ‘å·²å‘ç°$PLOTTER$å¦„å›¾$PLOTNAME$çš„å¯†è°‹.æˆ‘ä¹Ÿå·²æ´¾å‡ºä¸€åä½¿è€…è®©ä»–æ”¶æ‰‹.\n\næ‚¨çš„é—´è°æ€»ç®¡,\n$SPYMASTER$;;;;;;;;;;x
+AUTO_STOP_PLOT_START_SETUP;é—´è°æ€»ç®¡æ´¾å‡ºä¿¡ä½¿ã€‚;;;;;;;;;;x
+AUTO_STOP_PLOT_START_LOG;$SPYMASTER$ æ´¾å‡ºä¿¡ä½¿åˆ¶æ­¢å¯†è°‹å‘åŠ¨è€…;;;;;;;;;;x
+AUTO_STOP_PLOT_START_LETTER;æˆ‘å·²å‘æ‰€æœ‰å·²çŸ¥çš„å¯†è°‹å‚ä¸è€…æ´¾å‡ºå¯†ä½¿ï¼Œè®©ä»–ä»¬ç«‹å³åœæ­¢å¯†è°‹ã€‚\n\næ‚¨çš„é—´è°æ€»ç®¡,\n$SPYMASTER$;;;;;;;;;;x
+siege_leader;å›´åŸæŒ‡æŒ¥å®˜ã€‚;;;;;;;;;;x
+siege_leader_desc;æ­¤è§’è‰²å–„äºæŒ‡æŒ¥å›´åŸä½œæˆ˜ã€‚;;;;;;;;;;x
+SIEGE;å›´åŸ;;;;;;;;;;x
+ADD_IP;æ·»åŠ IPåœ°å€;;;;;;;;;;x
+REMOVE_IP;æ¸…é™¤IPåœ°å€;;;;;;;;;;x
+PENDING_PLOT_REQUEST;ç­‰å€™ç­”è¦†;;;;;;;;;;x
+ACCEPTED_PLOT_REQUEST;æ­£æ”¯æŒå¯†è°‹ã€‚;;;;;;;;;;x
+LOADING_TIP_52;ä½ å¯ä»¥ä½¿ç”¨Alté”®ç‚¹é€‰ç‰¹å®šçš„èˆ°é˜Ÿã€‚;;;;;;;;;;x
+EXIT;å…³é—­;;;;;;;;;;x
+CUT;å‰ªå§ï¼;;;;;;;;;;x
+STYLE;ç±»å‹;;;;;;;;;;x
+CAN_PERSUADE_TO_JOIN_PLOT;å¯ä»¥ç”¨ä¸€è¢‹é‡‘å¸æ”¶ä¹°;;;;;;;;;;x
+city_job_chancellor_arabic;å¤§ç»´é½;;;;;;;;;;x
+city_job_chancellor_iranian;å¤§ç»´é½;;;;;;;;;;x
+city_job_chancellor_turkish;å¤§ç»´é½;;;;;;;;;;x
+city_job_chancellor_west_african;å¤§ç»´é½;;;;;;;;;;x
+city_job_chancellor_greek;å»·è‡£;;;;;;;;;;x
+city_job_spymaster_greek;é—´è°æ€»ç®¡;;;;;;;;;;x
+city_job_treasurer_greek;è´¢æ”¿å®˜;;;;;;;;;;x
+city_job_chancellor_aztec;å»·è‡£;;;;;;;;;;x
+city_job_treasurer_aztec;è´¢æ”¿å®˜;;;;;;;;;;x
+city_job_spiritual_aztec;è¨å“ˆå†ˆ;;;;;;;;;;x
+city_job_spymaster_aztec;é—´è°æ€»ç®¡;;;;;;;;;;x
+city_job_marshal_aztec;å†›äº‹æ€»ç®¡;;;;;;;;;;x
+city_job_chancellor_zoroastrian_group;å»·è‡£;;;;;;;;;;x
+city_job_treasurer_zoroastrian_group;è´¢æ”¿å®˜;;;;;;;;;;x
+city_job_marshal_zoroastrian_group;å†›äº‹æ€»ç®¡;;;;;;;;;;x
+city_job_spiritual_zoroastrian_group;å¤§ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_zoroastrian;å¤§ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_christian;å®«å»·ç‰§å¸ˆ;;;;;;;;;;x
+city_job_spiritual_orthodox;åœ£å™¨çœ‹ç®¡äºº;;;;;;;;;;x
+city_job_spiritual_muslim;å®«å»·ä¼Šç›ç›®;;;;;;;;;;x
+city_job_spiritual_shiite;å®«å»·æ¯›æ‹‰;;;;;;;;;;x
+city_job_spiritual_pagan_group;ç¥­å¸é•¿;;;;;;;;;;x
+city_job_spiritual_pagan;å…ˆçŸ¥;;;;;;;;;;x
+city_job_spiritual_baltic_pagan;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_baltic_pagan_reformed;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_finnish_pagan;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_finnish_pagan_reformed;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_norse_pagan_reformed;å…ˆçŸ¥;;;;;;;;;;x
+city_job_spiritual_norse_pagan;å…ˆçŸ¥;;;;;;;;;;x
+city_job_spiritual_female_norse_pagan_reformed;å¥³å…ˆçŸ¥;;;;;;;;;;x
+city_job_spiritual_female_norse_pagan;å¥³å…ˆçŸ¥;;;;;;;;;;x
+city_job_spiritual_slavic_pagan;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_slavic_pagan_reformed;ç¥­å¸;;;;;;;;;;x
+city_job_spiritual_tengri_pagan;è¨æ»¡;;;;;;;;;;x
+city_job_spiritual_tengri_pagan_reformed;è¨æ»¡;;;;;;;;;;x
+EU4ConverterDLC;æ¬§é™†é£äº‘4è½¬åŒ–å™¨;;;;;;;;;;x
+CustomizationPackDLC;å®šåˆ¶åŒ…;;;;;;;;;;x
