--- a/localisation/v2_01.csv
+++ b/localisation/v2_01.csv
@@ -1,5 +1,6 @@
-ENDGAME_TEXT_JEWISH;дЦря╬╜Ёин╙акслл╚хк,сисзц╩спяг╡╝ю╜╨╠ж╝рАDLC,рР╢к,╡╩дэ╪лпЬсно╥,сно╥╫АйЬ.;;;;;;;;;;X
-NOT_ALLOWED_JEWISH;сисзц╩сп╪╓╩Няг╡╝ю╜╨╠ж╝рАDLCё╛дЦ╡╩дэ╟Гящ╖Yслл╚хк╖!ё║;;;;;;;;;;X
-NOT_ALLOWED_JEWISH_MP;╖Y$PLAYER$╖!╡╩дэтзц╩сп╪╓╩Няг╡╝ю╜╨╠ж╝рАDLC╣дгИ©Жоб╟Гящ╖Yслл╚хк╖!║ё;;;;;;;;;;X
-RD_NOT_PLAYABLE_WITHOUT_SOA_DLC;ипн╢с╣спяг╡╝ю╜╨╠ж╝рАDLC,╡╩дэ╟Гящслл╚хк;;;;;;;;;;X
-IRONMAN_MODE_SAVEGAME_DESC;╢Ф╣╣нд╪Чря╬╜╠╩пч╦д╩РкП╩╣,╡╩дэтзлЗхкдёй╫обткпп.;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+ENDGAME_TEXT_JEWISH;Д╫═Е╥╡Г╩▐Ф┬░Д╦╨Д╨├Г┼╧Е╓╙Д╨╨,Г■╠Д╨▌Ф╡║Ф°┴Д╨ Д╪╞Ф▀┴Г╫∙Д╧▀Хё■DLC,Е⌡═Ф╜╓,Д╦█Х┐╫Г╩╖Г╩╜Ф╦╦Ф┬▐,Ф╦╦Ф┬▐Г╩⌠Ф²÷.;;;;;;;;;;x
+NOT_ALLOWED_JEWISH;Г■╠Д╨▌Ф╡║Ф°┴Ф©─Ф╢╩Д╨ Д╪╞Ф▀┴Г╫∙Д╧▀Хё■DLCО╪▄Д╫═Д╦█Х┐╫Ф┴╝Ф╪■б╖YГ┼╧Е╓╙Д╨╨б╖!О╪│;;;;;;;;;;x
+NOT_ALLOWED_JEWISH_MP;б╖Y$PLAYER$б╖!Д╦█Х┐╫Е°╗Ф╡║Ф°┴Ф©─Ф╢╩Д╨ Д╪╞Ф▀┴Г╫∙Д╧▀Хё■DLCГ └Ф┐┘Е├╣Д╦▀Ф┴╝Ф╪■б╖YГ┼╧Е╓╙Д╨╨б╖!Ц─┌;;;;;;;;;;x
+RD_NOT_PLAYABLE_WITHOUT_SOA_DLC;Е╟ Ф°╙Ф▀╔Ф°┴Д╨ Д╪╞Ф▀┴Г╫∙Д╧▀Хё■DLC,Д╦█Х┐╫Ф┴╝Ф╪■Г┼╧Е╓╙Д╨╨;;;;;;;;;;x
+IRONMAN_MODE_SAVEGAME_DESC;Е╜≤Ф║ёФ√┤Д╩╤Е╥╡Г╩▐Х╒╚Д©╝Ф■╧Ф┬√Ф█÷Е²▐,Д╦█Х┐╫Е°╗И⌠│Д╨╨Ф╗║Е╪▐Д╦▀Х©░Х║▄.;;;;;;;;;;x
