--- a/localisation/v2_15.csv
+++ b/localisation/v2_15.csv
@@ -1,21 +1,22 @@
-temple_baron_jewish;À­±È;;;;;;;;;;X
-temple_baron_samaritan;À­±È;;;;;;;;;;X
-temple_baron_karaite;À­±È;;;;;;;;;;X
-RETTYPE_CUL_NUBIAN;Å¬±ÈÑÇ¹­¼ıÊÖ;;;;;;;;;;X
-ca_culture_nubian_1;Å¬±ÈÑÇÕ½Ê¿±øÓª;;;;;;;;;;X
-ca_culture_nubian_2;Å¬±ÈÑÇÕ½Ê¿±øÓª;;;;;;;;;;X
-ca_culture_nubian_3;Å¬±ÈÑÇÕ½Ê¿±øÓª;;;;;;;;;;X
-ca_culture_nubian_4;Å¬±ÈÑÇÕ½Ê¿±øÓª;;;;;;;;;;X
-ca_culture_nubian_1_desc;ÕâĞ©±øÓªÊÇ¹Å´úÅ¬±ÈÑÇÕ½Ê¿´«Í³µÄÅàÑøºÍ·¢Õ¹µÄµØ·½¡£Å¬±ÈÑÇ×Ô¹Å´úÆğ¾ÍÒÔÆä¾«Õ¿µÄ¹­¼ıÊÖ¶ø±¸ÊÜ×ğ¾´£¬ÆäËûµÄ¾«Ó¢²½±ø²¿¶ÓÒ²µÃµ½ÑµÁ·ÒÔÖ§»¤ÕâÒ»Å¬±ÈÑÇÍ³ÖÎÕßµÄÓĞÁ¦ÎäÆ÷¡£;;;;;;;;;;X
-temple_baron_slavic_pagan;ÈøÂú;;;;;;;;;;X
-temple_baron_slavic_pagan_reformed;ÈøÂú;;;;;;;;;;X
-temple_baron_baltic_pagan;ÈøÂú;;;;;;;;;;X
-temple_baron_baltic_pagan_reformed;ÈøÂú;;;;;;;;;;X
-temple_baron_aztec;ÈøÂú;;;;;;;;;;X
-temple_baron_aztec_reformed;ÈøÂú;;;;;;;;;;X
-temple_baron_mazdaki;ÍßÀÊ;;;;;;;;;;X
-temple_baron_manichean;ÍßÀÊ;;;;;;;;;;X
-coa_plain_pagan;ÆÕÍ¨;;;;;;;;;;X
-coa_plain_indian;ÆÕÍ¨;;;;;;;;;;X
-temple_baron_hellenic_pagan;¼ÀË¾;;;;;;;;;;X
-temple_baron_female_hellenic_pagan;Å®¼ÀË¾;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+temple_baron_jewish;æ‹‰æ¯”;;;;;;;;;;x
+temple_baron_samaritan;æ‹‰æ¯”;;;;;;;;;;x
+temple_baron_karaite;æ‹‰æ¯”;;;;;;;;;;x
+RETTYPE_CUL_NUBIAN;åŠªæ¯”äºšå¼“ç®­æ‰‹;;;;;;;;;;x
+ca_culture_nubian_1;åŠªæ¯”äºšæˆ˜å£«å…µè¥;;;;;;;;;;x
+ca_culture_nubian_2;åŠªæ¯”äºšæˆ˜å£«å…µè¥;;;;;;;;;;x
+ca_culture_nubian_3;åŠªæ¯”äºšæˆ˜å£«å…µè¥;;;;;;;;;;x
+ca_culture_nubian_4;åŠªæ¯”äºšæˆ˜å£«å…µè¥;;;;;;;;;;x
+ca_culture_nubian_1_desc;è¿™äº›å…µè¥æ˜¯å¤ä»£åŠªæ¯”äºšæˆ˜å£«ä¼ ç»Ÿçš„åŸ¹å…»å’Œå‘å±•çš„åœ°æ–¹ã€‚åŠªæ¯”äºšè‡ªå¤ä»£èµ·å°±ä»¥å…¶ç²¾æ¹›çš„å¼“ç®­æ‰‹è€Œå¤‡å—å°Šæ•¬ï¼Œå…¶ä»–çš„ç²¾è‹±æ­¥å…µéƒ¨é˜Ÿä¹Ÿå¾—åˆ°è®­ç»ƒä»¥æ”¯æŠ¤è¿™ä¸€åŠªæ¯”äºšç»Ÿæ²»è€…çš„æœ‰åŠ›æ­¦å™¨ã€‚;;;;;;;;;;x
+temple_baron_slavic_pagan;è¨æ»¡;;;;;;;;;;x
+temple_baron_slavic_pagan_reformed;è¨æ»¡;;;;;;;;;;x
+temple_baron_baltic_pagan;è¨æ»¡;;;;;;;;;;x
+temple_baron_baltic_pagan_reformed;è¨æ»¡;;;;;;;;;;x
+temple_baron_aztec;è¨æ»¡;;;;;;;;;;x
+temple_baron_aztec_reformed;è¨æ»¡;;;;;;;;;;x
+temple_baron_mazdaki;ç“¦èµ«å…°;;;;;;;;;;x
+temple_baron_manichean;ç“¦èµ«å…°;;;;;;;;;;x
+coa_plain_pagan;æ™®é€š;;;;;;;;;;x
+coa_plain_indian;æ™®é€š;;;;;;;;;;x
+temple_baron_hellenic_pagan;ç¥­å¸;;;;;;;;;;x
+temple_baron_female_hellenic_pagan;å¥³ç¥­å¸;;;;;;;;;;x
