--- a/localisation/v2_31.csv
+++ b/localisation/v2_31.csv
@@ -1,3 +1,4 @@
-party_timer;×î½üµÄ¿ñ»¶;;;;;;;;;;X
-temple_barony_of_zun_pagan;Ì«ÑôÉñµî;;;;;;;;;;X
-temple_barony_of_zun_pagan_reformed;Ì«ÑôÉñµî;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+party_timer;æœ€è¿‘çš„ç‹‚æ¬¢;;;;;;;;;;x
+temple_barony_of_zun_pagan;å¤ªé˜³ç¥žæ®¿;;;;;;;;;;x
+temple_barony_of_zun_pagan_reformed;å¤ªé˜³ç¥žæ®¿;;;;;;;;;;x
