--- a/localisation/RulerDesigner.csv
+++ b/localisation/RulerDesigner.csv
@@ -1,87 +1,88 @@
-RD_APPEARANCE;ÍâÃ²;;;;;;;;;;X
-RD_COAT_OF_ARMS;¶Ü»Õ;;;;;;;;;;X
-RD_ATTRIBUTES;ÄÜÁ¦;;;;;;;;;;X
-RD_ETHNICITY;ÖÖ×å;;;;;;;;;;X
-RD_EYES;ÑÛ¾¦;;;;;;;;;;X
-RD_NOSE;±Ç×Ó;;;;;;;;;;X
-RD_MOUTH;×ì°Í;;;;;;;;;;X
-RD_CHIN;ÏÂ°Í;;;;;;;;;;X
-RD_NECK;¾±²¿;;;;;;;;;;X
-RD_CHEEKS;Á³¼Õ;;;;;;;;;;X
-RD_EARS;¶ú¶ä;;;;;;;;;;X
-RD_EYE_COLOR;Í«É«;;;;;;;;;;X
-RD_HAIRSTYLE;·¢ÐÍ;;;;;;;;;;X
-RD_HAIR_COLOR;·¢É«;;;;;;;;;;X
-RD_BEARD;ºúÐë;;;;;;;;;;X
-RD_VISUALIZE;Ð¤Ïñ;;;;;;;;;;X
-RD_CLOTHES;·þÊÎ;;;;;;;;;;X
-RD_HEADGEAR;Í·ÊÎ;;;;;;;;;;X
-RD_AGE;ÄêÁä;;;;;;;;;;X
-RD_BACKGROUND;±³¾°;;;;;;;;;;X
-RD_CANCEL;È¡Ïû;;;;;;;;;;X
-RD_NEXT;ÏÂÒ»²½;;;;;;;;;;X
-RD_LAYOUT;ÑùÊ½;;;;;;;;;;X
-RD_SLOT_1;À¸Î»1;;;;;;;;;;X
-RD_SLOT_2;À¸Î»2;;;;;;;;;;X
-RD_SLOT_3;À¸Î»3;;;;;;;;;;X
-RD_SLOT_4;À¸Î»4;;;;;;;;;;X
-RD_COLOR_1;ÑÕÉ«1;;;;;;;;;;X
-RD_COLOR_2;ÑÕÉ«2;;;;;;;;;;X
-RD_COLOR_3;ÑÕÉ«3;;;;;;;;;;X
-RD_EMBLEM;ÎÆÕÂ;;;;;;;;;;X
-PORTRAIT_westerngfx;Î÷·½ÈË;;;;;;;;;;X
-PORTRAIT_italiangfx;Òâ´óÀûÈË;;;;;;;;;;X
-PORTRAIT_byzantinegfx;°ÝÕ¼Í¥ÈË;;;;;;;;;;X
-PORTRAIT_muslimgfx;ÄÂË¹ÁÖ;;;;;;;;;;X
-RD_YOUNG;ÇàÄê;;;;;;;;;;X
-RD_MIDDLEAGED;ÖÐÄê;;;;;;;;;;X
-RD_OLD;ÀÏÄê;;;;;;;;;;X
-coa_party_per_fess;Ë®Æ½·Ö¸îÊ½¶Ü»Õ;;;;;;;;;;X
-coa_party_per_pale;´¹Ö±·Ö¸îÊ½¶Ü»Õ;;;;;;;;;;X
-coa_party_per_cross;Ê®×ÖÐÍ·Ö¸îÊ½¶Ü»Õ;;;;;;;;;;X
-coa_party_triangle;Èý½Ç·Ö¸îÊ½¶Ü»Õ;;;;;;;;;;X
-coa_plain;ÎÞ»¨ÎÆ;;;;;;;;;;X
-RD_LINK_PATTERN;Á¬½ÓËùÓÐÀ¸Î»µÄ»¨ÎÆ;;;;;;;;;;X
-RD_LINK_COLOR;Á¬½ÓËùÓÐÀ¸Î»µÄÑÕÉ«;;;;;;;;;;X
-RD_MARRIED;¹´Ñ¡ÒÔÊ¹ÈËÎï´¦ÓÚÒÑ»é×´Ì¬;;;;;;;;;;X
-RD_CLEARTRAITS;ÒÆ³ýËùÓÐÌØÕ÷\nÓÒ»÷Ä³ÏîÌØÖÊÒÔµ¥¶ÀÈ¥³ý;;;;;;;;;;X
-RD_DIPLOMACY;Íâ½»£º;;;;;;;;;;X
-RD_MARTIAL;Í³ÂÊ£º;;;;;;;;;;X
-RD_STEWARDSHIP;²ÆÕþ£º;;;;;;;;;;X
-RD_INTRIGUE;ÖÇÄ±£º;;;;;;;;;;X
-RD_LEARNING;Ñ§Ê¶£º;;;;;;;;;;X
-RD_HEALTH;½¡¿µ£º;;;;;;;;;;X
-RD_FERTILITY;ÉúÓý£º;;;;;;;;;;X
-RD_SONS;¶ù×Ó£º;;;;;;;;;;X
-RD_DAUGHTERS;Å®¶ù£º;;;;;;;;;;X
-RD_FIRST_NAME;Ãû×Ö;;;;;;;;;;X
-RD_DYNASTY;¼Ò×å;;;;;;;;;;X
-RD_MARRIED2;»éÒö×´Ì¬£º;;;;;;;;;;X
-RD_CULTURE;ÎÄ»¯£º;;;;;;;;;;X
-RD_RELIGION;×Ú½Ì£º;;;;;;;;;;X
-RD_EDUCATION;½ÌÓý;;;;;;;;;;X
-RD_TRAITS;ÌØÖÊ;;;;;;;;;;X
-RD_FINISH;Íê³É;;;;;;;;;;X
-RD_IS_MALE;ÈËÎïÎªÄÐÐÔ£¬µã»÷ÒÔ¸Ä±ä;;;;;;;;;;X
-RD_IS_FEMALE;ÈËÎïÎªÅ®ÐÔ£¬µã»÷ÒÔ¸Ä±ä;;;;;;;;;;X
-RD_NOT_PLAYABLE;§R²»ÄÜ°çÑÝÐÅ·î´Ë×Ú½ÌµÄÈËÎï§!;;;;;;;;;;X
-RD_OPEN_RULER_DESIGNER;´ò¿ªÈËÎï±à¼­Æ÷;;;;;;;;;;X
-RD_CHANGE_GRAPHICAL_CULTURE;¸ü»»ÎÄ»¯Í¼±ê;;;;;;;;;;X
-RD_CHANGE_CULTURE;¸ü»»ÎÄ»¯;;;;;;;;;;X
-RD_CHANGE_RELIGION;¸ü»»×Ú½Ì;;;;;;;;;;X
-RD_CHANGE_EDUCATIONAL_TRAIT;¸ü»»½ÌÓýÌØÖÊ;;;;;;;;;;X
-RD_CUSTOMIZED_AGE;ÄêÁä: $AGE$ ( ×î´óÖµ: $MAX$ );;;;;;;;;;X
-RD_RANDOMIZE;Ëæ»úÉú³É;;;;;;;;;;X
-RD_FAIL_AGE;ÈËÎï¹ýÓÚÄêÀÏ£¬²»ÄÜÒÔÖ®¿ªÊ¼ÓÎÏ·;;;;;;;;;;X
-RD_FAIL_CHILDREN;ÈËÎï¹ýÓÚÄêÇá£¬²»ÄÜÓµÓÐÈç´Ë¶àµÄ¶ùÅ®£¬ÄêÁä×îÐ¡ÖµÎª16¼ÓÉÏ¶ùÅ®µÄÊýÁ¿;;;;;;;;;;X
-RD_EXTRA_CLICK;µã»÷ÒÔ¸Ä±ä\n°´×¡Shift¼üÒÔÎå±¶Ôö¼õ\n°´×¡Ctrl¼üÒÔÊ®±¶Ôö¼õ;;;;;;;;;;X
-RD_RESET;ÖØÖÃ;;;;;;;;;;X
-RD_FAIL_NO_NAME;ÄãÐèÒªÉè¶¨´ËÈËÎïµÄÃû×Ö;;;;;;;;;;X
-RD_FAIL_NO_DYN_NAME;ÄãÐèÒªÉè¶¨´ËÈËÎïµÄ¼Ò×åÃû;;;;;;;;;;X
-RD_RULER_DESIGNER;Í³ÖÎÕßÉè¼ÆÆ÷;;;;;;;;;;X
-RD_FAIL_NO_UNPLAYABLE;§R²»ÄÜ×Ô¶¨Òå²»¿É°çÑÝÈËÎï§!;;;;;;;;;;X
-RD_FAIL_NO_DLC;§RÄãÐèÒªÈËÎï±à¼­Æ÷DLC§!;;;;;;;;;;X
-RD_FAIL_SAME_NAME;²»ÄÜÓë±»Ìæ»»µÄÈËÎïÍ¬Ãû;;;;;;;;;;X
-RD_CHANGE_SONS;¸Ä±ä´ËÈËÎïµÄ¶ù×ÓÊýÁ¿;;;;;;;;;;X
-RD_CHANGE_DAUGHTERS;¸Ä±ä´ËÈËÎïµÄÅ®¶ùÊýÁ¿;;;;;;;;;;X
-RD_ADD_TRAIT;Ìí¼ÓÌØÖÊ;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+RD_APPEARANCE;å¤–è²Œ;;;;;;;;;;x
+RD_COAT_OF_ARMS;ç›¾å¾½;;;;;;;;;;x
+RD_ATTRIBUTES;èƒ½åŠ›;;;;;;;;;;x
+RD_ETHNICITY;ç§æ—;;;;;;;;;;x
+RD_EYES;çœ¼ç›;;;;;;;;;;x
+RD_NOSE;é¼»å­;;;;;;;;;;x
+RD_MOUTH;å˜´å·´;;;;;;;;;;x
+RD_CHIN;ä¸‹å·´;;;;;;;;;;x
+RD_NECK;é¢ˆéƒ¨;;;;;;;;;;x
+RD_CHEEKS;è„¸é¢Š;;;;;;;;;;x
+RD_EARS;è€³æœµ;;;;;;;;;;x
+RD_EYE_COLOR;çž³è‰²;;;;;;;;;;x
+RD_HAIRSTYLE;å‘åž‹;;;;;;;;;;x
+RD_HAIR_COLOR;å‘è‰²;;;;;;;;;;x
+RD_BEARD;èƒ¡é¡»;;;;;;;;;;x
+RD_VISUALIZE;è‚–åƒ;;;;;;;;;;x
+RD_CLOTHES;æœé¥°;;;;;;;;;;x
+RD_HEADGEAR;å¤´é¥°;;;;;;;;;;x
+RD_AGE;å¹´é¾„;;;;;;;;;;x
+RD_BACKGROUND;èƒŒæ™¯;;;;;;;;;;x
+RD_CANCEL;å–æ¶ˆ;;;;;;;;;;x
+RD_NEXT;ä¸‹ä¸€æ­¥;;;;;;;;;;x
+RD_LAYOUT;æ ·å¼;;;;;;;;;;x
+RD_SLOT_1;æ ä½1;;;;;;;;;;x
+RD_SLOT_2;æ ä½2;;;;;;;;;;x
+RD_SLOT_3;æ ä½3;;;;;;;;;;x
+RD_SLOT_4;æ ä½4;;;;;;;;;;x
+RD_COLOR_1;é¢œè‰²1;;;;;;;;;;x
+RD_COLOR_2;é¢œè‰²2;;;;;;;;;;x
+RD_COLOR_3;é¢œè‰²3;;;;;;;;;;x
+RD_EMBLEM;çº¹ç« ;;;;;;;;;;x
+PORTRAIT_westerngfx;è¥¿æ–¹äºº;;;;;;;;;;x
+PORTRAIT_italiangfx;æ„å¤§åˆ©äºº;;;;;;;;;;x
+PORTRAIT_byzantinegfx;æ‹œå åº­äºº;;;;;;;;;;x
+PORTRAIT_muslimgfx;ç©†æ–¯æž—;;;;;;;;;;x
+RD_YOUNG;é’å¹´;;;;;;;;;;x
+RD_MIDDLEAGED;ä¸­å¹´;;;;;;;;;;x
+RD_OLD;è€å¹´;;;;;;;;;;x
+coa_party_per_fess;æ°´å¹³åˆ†å‰²å¼ç›¾å¾½;;;;;;;;;;x
+coa_party_per_pale;åž‚ç›´åˆ†å‰²å¼ç›¾å¾½;;;;;;;;;;x
+coa_party_per_cross;åå­—åž‹åˆ†å‰²å¼ç›¾å¾½;;;;;;;;;;x
+coa_party_triangle;ä¸‰è§’åˆ†å‰²å¼ç›¾å¾½;;;;;;;;;;x
+coa_plain;æ— èŠ±çº¹;;;;;;;;;;x
+RD_LINK_PATTERN;è¿žæŽ¥æ‰€æœ‰æ ä½çš„èŠ±çº¹;;;;;;;;;;x
+RD_LINK_COLOR;è¿žæŽ¥æ‰€æœ‰æ ä½çš„é¢œè‰²;;;;;;;;;;x
+RD_MARRIED;å‹¾é€‰ä»¥ä½¿äººç‰©å¤„äºŽå·²å©šçŠ¶æ€;;;;;;;;;;x
+RD_CLEARTRAITS;ç§»é™¤æ‰€æœ‰ç‰¹å¾\nå³å‡»æŸé¡¹ç‰¹è´¨ä»¥å•ç‹¬åŽ»é™¤;;;;;;;;;;x
+RD_DIPLOMACY;å¤–äº¤:;;;;;;;;;;x
+RD_MARTIAL;ç»ŸçŽ‡:;;;;;;;;;;x
+RD_STEWARDSHIP;è´¢æ”¿:;;;;;;;;;;x
+RD_INTRIGUE;æ™ºè°‹:;;;;;;;;;;x
+RD_LEARNING;å­¦è¯†:;;;;;;;;;;x
+RD_HEALTH;å¥åº·:;;;;;;;;;;x
+RD_FERTILITY;ç”Ÿè‚²:;;;;;;;;;;x
+RD_SONS;å„¿å­:;;;;;;;;;;x
+RD_DAUGHTERS;å¥³å„¿:;;;;;;;;;;x
+RD_FIRST_NAME;åå­—;;;;;;;;;;x
+RD_DYNASTY;å®¶æ—;;;;;;;;;;x
+RD_MARRIED2;å©šå§»çŠ¶æ€:;;;;;;;;;;x
+RD_CULTURE;æ–‡åŒ–:;;;;;;;;;;x
+RD_RELIGION;å®—æ•™:;;;;;;;;;;x
+RD_EDUCATION;æ•™è‚²;;;;;;;;;;x
+RD_TRAITS;ç‰¹è´¨;;;;;;;;;;x
+RD_FINISH;å®Œæˆ;;;;;;;;;;x
+RD_IS_MALE;äººç‰©ä¸ºç”·æ€§ï¼Œç‚¹å‡»ä»¥æ”¹å˜;;;;;;;;;;x
+RD_IS_FEMALE;äººç‰©ä¸ºå¥³æ€§ï¼Œç‚¹å‡»ä»¥æ”¹å˜;;;;;;;;;;x
+RD_NOT_PLAYABLE;Â§Rä¸èƒ½æ‰®æ¼”ä¿¡å¥‰æ­¤å®—æ•™çš„äººç‰©Â§!;;;;;;;;;;x
+RD_OPEN_RULER_DESIGNER;æ‰“å¼€äººç‰©ç¼–è¾‘å™¨;;;;;;;;;;x
+RD_CHANGE_GRAPHICAL_CULTURE;æ›´æ¢æ–‡åŒ–å›¾æ ‡;;;;;;;;;;x
+RD_CHANGE_CULTURE;æ›´æ¢æ–‡åŒ–;;;;;;;;;;x
+RD_CHANGE_RELIGION;æ›´æ¢å®—æ•™;;;;;;;;;;x
+RD_CHANGE_EDUCATIONAL_TRAIT;æ›´æ¢æ•™è‚²ç‰¹è´¨;;;;;;;;;;x
+RD_CUSTOMIZED_AGE;å¹´é¾„: $AGE$ ( æœ€å¤§å€¼: $MAX$ );;;;;;;;;;x
+RD_RANDOMIZE;éšæœºç”Ÿæˆ;;;;;;;;;;x
+RD_FAIL_AGE;äººç‰©è¿‡äºŽå¹´è€,ä¸èƒ½ä»¥ä¹‹å¼€å§‹æ¸¸æˆ;;;;;;;;;;x
+RD_FAIL_CHILDREN;äººç‰©è¿‡äºŽå¹´è½»ï¼Œä¸èƒ½æ‹¥æœ‰å¦‚æ­¤å¤šçš„å„¿å¥³ï¼Œå¹´é¾„æœ€å°å€¼ä¸º16åŠ ä¸Šå„¿å¥³çš„æ•°é‡;;;;;;;;;;x
+RD_EXTRA_CLICK;ç‚¹å‡»ä»¥æ”¹å˜\næŒ‰ä½Shifté”®ä»¥äº”å€å¢žå‡\næŒ‰ä½Ctrlé”®ä»¥åå€å¢žå‡;;;;;;;;;;x
+RD_RESET;é‡ç½®;;;;;;;;;;x
+RD_FAIL_NO_NAME;ä½ éœ€è¦è®¾å®šæ­¤äººç‰©çš„åå­—;;;;;;;;;;x
+RD_FAIL_NO_DYN_NAME;ä½ éœ€è¦è®¾å®šæ­¤äººç‰©çš„å®¶æ—å;;;;;;;;;;x
+RD_RULER_DESIGNER;ç»Ÿæ²»è€…è®¾è®¡å™¨;;;;;;;;;;x
+RD_FAIL_NO_UNPLAYABLE;Â§Rä¸èƒ½è‡ªå®šä¹‰ä¸å¯æ‰®æ¼”äººç‰©Â§!;;;;;;;;;;x
+RD_FAIL_NO_DLC;Â§Rä½ éœ€è¦äººç‰©ç¼–è¾‘å™¨DLCÂ§!;;;;;;;;;;x
+RD_FAIL_SAME_NAME;ä¸èƒ½ä¸Žè¢«æ›¿æ¢çš„äººç‰©åŒå;;;;;;;;;;x
+RD_CHANGE_SONS;æ”¹å˜æ­¤äººç‰©çš„å„¿å­æ•°é‡;;;;;;;;;;x
+RD_CHANGE_DAUGHTERS;æ”¹å˜æ­¤äººç‰©çš„å¥³å„¿æ•°é‡;;;;;;;;;;x
+RD_ADD_TRAIT;æ·»åŠ ç‰¹è´¨;;;;;;;;;;x
