--- a/localisation/v1_08.csv
+++ b/localisation/v1_08.csv
@@ -1,20 +1,21 @@
-IS_NOT_ADULT;²»ÊÇ³ÉÄêÈË;;;;;;;;;;X
-IS_ADULT;ÊÇ³ÉÄêÈË;;;;;;;;;;X
-IS_NOT_MARRIAGE_ADULT;Ã»ÓÐµ½½á»éÄêÁä;;;;;;;;;;X
-IS_MARRIAGE_ADULT;ÒÑ¾­µ½ÁË½á»éÄêÁä;;;;;;;;;;X
-DISEASE_ACTIVATED;$DISEASE$ ¿ÉÄÜ»á±¬·¢ÎÁÒß¼²²¡;;;;;;;;;;X
-AIREASON_IS_PRISONER_OF_CHAR;ÊÇ§Y[GetTitledFirstName]§!µÄ·ýÂ²§!;;;;;;;;;;X
-SunsetInvasionDLC;ÈÕÂäÈëÇÖ;;;;;;;;;;X
-NOT_COASTAL;Õâ¸öÊ¡·Ý²»ÑØº£;;;;;;;;;;X
-NOT_FORBIDDEN_LEAD;ÕâÎ»ÊàÃÜ´ó³¼ÏÖÔÚÔÊÐí´øÁì¾ü¶Ó.\n§Gµã»÷ÕÙ»ØÊàÃÜ´ó³¼²¢½ûÖ¹ÆäÁì¾ü§!;;;;;;;;;;X
-FORBIDDEN_LEAD;ÕâÎ»ÊàÃÜ´ó³¼ÏÖÔÚ±»½ûÖ¹´øÁì¾ü¶Ó.\n§Gµã»÷ÔÊÐíÆäÁì¾ü§!;;;;;;;;;;X
-DEMAND_RELIGIOUS_CONVERSION_INTERACTION_0;§Y[Recipient.GetFirstName] ½«´Ó¼àÓü±»ÊÍ·Å.£¬Èç¹û[Recipient.GetSubjectPronoun] Í¬Òâ§!;;;;;;;;;;X
-opinion_fought_for_claimant;ÎªÐû³ÆÈ¨¶øÕ½;;;;;;;;;;X
-EVTOPTD9001;ÀñÃ²µÄÑ¯ÎÊ.;;;;;;;;;;X
-EVTDESC9003;Ç×°®µÄ [Root.GetTitle],\n\nÎÒÒÑ¾­ÖªµÀÔÚÎÒµÄÁìµØÄÚÓÐÄ³Ð©ÅÉÏµÕýÔÚÆÆ»µÎÒµÄÍ³ÖÎ. Èç¹ûÄã²ÎÓëÁË»òÕß´òËãÕâÃ´×ö, ÎÒÏàÐÅÄãÏÖÔÚ»á´òÏûÕâ¸öÄîÍ·.\n\nÊðÃû,\n[From.GetTitledName];;;;;;;;;;X
-EVTOPTA9003;×îºÃ²»ÒªÃ°Õâ¸öÏÕ...;;;;;;;;;;X
-EVTOPTB9003;¹þ! Õâ·âÐÅÊÇÒ»¸ö¾øÍûµÄ±íÏÖ.;;;;;;;;;;X
-EVTTOOLTIP9023;ÄãËÍ³öÁËÒ»·âÀñÃ²µÄÇëÇóÊé.;;;;;;;;;;X
-EVTDESC9027;×ð¾´µÄ [Root.GetTitle],\n\nÄãºÃ! ÎÒ²»Ï²»¶Õâ¸ö, µ«ÊÇÎªÁË¹ú¼ÒµÄÐËÊ¢, ÎÒ½«»áÖ§³ÖÄãËùÓÐµÄÅÉÏµ. ²»ÒªÈÃÎÒºó»Ú×Ô¼ºµÄ¾ö¶¨.\n\nÊðÃû,\n[From.GetTitledName];;;;;;;;;;X
-DATA_COLLECTION_AGREEMENT;ÄãÔ¸ÒâÍ¨¹ýÊÕ¼¯ÓÐ¹ØÓÎÏ·Ï°¹ßºÍ¿ÉÏÂÔØÄÚÈÝ¼°MODµÄÊÜ»¶Ó­³Ì¶ÈµÄ×ÊÁÏÀ´°ïÖúÎÒÃÇÍêÉÆÍõ¹ú·çÔÆ2Ã´Èç¹ûÄãÍ¬Òâ£¬Äã¶ÔÍõ¹ú·çÔÆ2µÄ²Ù×÷ÐÐÎª½«»áÔÚÄãÓÎÏ·Ê±ÒÔ²»¼ÇÃûµÄÐÎÊ½·¢¸øPÉç.PÉç²»»á£¬Ò²²»ÄÜÍ¨¹ýÕâÐ©²ÄÁÏÀ´»ñÈ¡Ê¹ÓÃÕßµÄË½ÈËÐÅÏ¢.;;;;;;;;;;X
-DATA_COLLECTION_TITLE;°ïÖúÎÒÃÇ¸Ä½øÍõ¹ú·çÔÆII£¿;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+IS_NOT_ADULT;ä¸æ˜¯æˆå¹´äºº;;;;;;;;;;x
+IS_ADULT;æ˜¯æˆå¹´äºº;;;;;;;;;;x
+IS_NOT_MARRIAGE_ADULT;æ²¡æœ‰åˆ°ç»“å©šå¹´é¾„;;;;;;;;;;x
+IS_MARRIAGE_ADULT;å·²ç»åˆ°äº†ç»“å©šå¹´é¾„;;;;;;;;;;x
+DISEASE_ACTIVATED;$DISEASE$ å¯èƒ½ä¼šçˆ†å‘ç˜Ÿç–«ç–¾ç—…;;;;;;;;;;x
+AIREASON_IS_PRISONER_OF_CHAR;æ˜¯Â§Y[GetTitledFirstName]Â§!çš„ä¿˜è™Â§!;;;;;;;;;;x
+SunsetInvasionDLC;æ—¥è½å…¥ä¾µ;;;;;;;;;;x
+NOT_COASTAL;è¿™ä¸ªéƒ¡ä¸æ²¿æµ·;;;;;;;;;;x
+NOT_FORBIDDEN_LEAD;è¿™ä½å»·è‡£çŽ°åœ¨å…è®¸å¸¦é¢†å†›é˜Ÿ.\nÂ§Gç‚¹å‡»å¬å›žå»·è‡£å¹¶ç¦æ­¢å…¶é¢†å†›Â§!;;;;;;;;;;x
+FORBIDDEN_LEAD;è¿™ä½å»·è‡£çŽ°åœ¨è¢«ç¦æ­¢å¸¦é¢†å†›é˜Ÿ.\nÂ§Gå…è®¸å…¶é¢†å†›Â§!;;;;;;;;;;x
+DEMAND_RELIGIOUS_CONVERSION_INTERACTION_0;Â§Y[Recipient.GetFirstName] å°†ä»Žç›‘ç‹±è¢«é‡Šæ”¾.ï¼Œå¦‚æžœ[Recipient.GetSubjectPronoun] åŒæ„Â§!;;;;;;;;;;x
+opinion_fought_for_claimant;ä¸ºå®£ç§°æƒè€Œæˆ˜;;;;;;;;;;x
+EVTOPTD9001;ç¤¼è²Œçš„è¯¢é—®.;;;;;;;;;;x
+EVTDESC9003;äº²çˆ±çš„ [Root.GetTitle],\n\næˆ‘å·²ç»çŸ¥é“åœ¨æˆ‘çš„é¢†åœ°å†…æœ‰æŸäº›æ´¾ç³»æ­£åœ¨ç ´åæˆ‘çš„ç»Ÿæ²». å¦‚æžœä½ å‚ä¸Žäº†æˆ–è€…æ‰“ç®—è¿™ä¹ˆåš, æˆ‘ç›¸ä¿¡ä½ çŽ°åœ¨ä¼šæ‰“æ¶ˆè¿™ä¸ªå¿µå¤´.\n\nç½²å,\n[From.GetTitledName];;;;;;;;;;x
+EVTOPTA9003;æœ€å¥½ä¸è¦å†’è¿™ä¸ªé™©...;;;;;;;;;;x
+EVTOPTB9003;å“ˆ! è¿™å°ä¿¡æ˜¯ä¸€ä¸ªç»æœ›çš„è¡¨çŽ°.;;;;;;;;;;x
+EVTTOOLTIP9023;ä½ é€å‡ºäº†ä¸€å°ç¤¼è²Œçš„è¯·æ±‚ä¹¦.;;;;;;;;;;x
+EVTDESC9027;å°Šæ•¬çš„ [Root.GetTitle],\n\nä½ å¥½! æˆ‘ä¸å–œæ¬¢è¿™ä¸ª, ä½†æ˜¯ä¸ºäº†å›½å®¶çš„å…´ç››, æˆ‘å°†ä¼šæ”¯æŒä½ æ‰€æœ‰çš„æ´¾ç³». ä¸è¦è®©æˆ‘åŽæ‚”è‡ªå·±çš„å†³å®š.\n\nç½²å,\n[From.GetTitledName];;;;;;;;;;x
+DATA_COLLECTION_AGREEMENT;ä½ æ„¿æ„é€šè¿‡æ”¶é›†æœ‰å…³æ¸¸æˆä¹ æƒ¯å’Œå¯ä¸‹è½½å†…å®¹åŠMODçš„å—æ¬¢è¿Žç¨‹åº¦çš„èµ„æ–™æ¥å¸®åŠ©æˆ‘ä»¬å®Œå–„çŽ‹å›½é£Žäº‘2ä¹ˆå¦‚æžœä½ åŒæ„ï¼Œä½ å¯¹çŽ‹å›½é£Žäº‘2çš„æ“ä½œè¡Œä¸ºå°†ä¼šåœ¨ä½ æ¸¸æˆæ—¶ä»¥ä¸è®°åçš„å½¢å¼å‘ç»™Pç¤¾.Pç¤¾ä¸ä¼šï¼Œä¹Ÿä¸èƒ½é€šè¿‡è¿™äº›ææ–™æ¥èŽ·å–ä½¿ç”¨è€…çš„ç§äººä¿¡æ¯.;;;;;;;;;;x
+DATA_COLLECTION_TITLE;å¸®åŠ©æˆ‘ä»¬æ”¹è¿›çŽ‹å›½é£Žäº‘IIï¼Ÿ;;;;;;;;;;x
