--- a/localisation/v1_103.csv
+++ b/localisation/v1_103.csv
@@ -1,1 +1,2 @@
-REVOKE_TITLE_INTERACTION_2H;µÛ¹ú¹ÜÖÎÔÊÐíÎÒÃÇÊÕ»ØÕýµ±µÄÊ×¶¼§Y$CAPITAL$§!¶ø²»ÒýÆð¹ó×åµÄ·´¶Ô¡£;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+REVOKE_TITLE_INTERACTION_2H;å¸å›½å®«å»·æŽˆäºˆæˆ‘ä»¬å¤ºå›žæˆ‘ä»¬åº”æœ‰çš„é¦–éƒ½Â§Y$CAPITAL$Â§! æ²¡æœ‰è´µæ—åå¯¹è¿™ä¸€è¡ŒåŠ¨.;;;;;;;;;;x
