--- a/localisation/v2_14.csv
+++ b/localisation/v2_14.csv
@@ -1,1 +1,2 @@
-NOMINATE_BISHOP_TO_POPE_INTERACTION_LONG_DESC;ÄãÄÜÇëÇó×Ú½ÌÁìÐäÉèÖÃÒ»¸öÄãÑ¡ÔñµÄÖ÷½Ì;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+NOMINATE_BISHOP_TO_POPE_INTERACTION_LONG_DESC;ä½ èƒ½è¯·æ±‚å®—æ•™é¢†è¢–è®¾ç½®ä¸€ä¸ªä½ é€‰æ‹©çš„ä¸»æ•™;;;;;;;;;;x
