--- a/localisation/v2_20d.csv
+++ b/localisation/v2_20d.csv
@@ -1,18 +1,19 @@
-vice_royalty_2_desc;½¨Á¢Íõ¹ú¼°¹«¹ú×Ü¶½¡£;;;;;;;;;;X
-duke_vice_royalties;ÔÊÐíÍõ¹ú¼°¹«¹ú×Ü¶½;;;;;;;;;;X
-PLOT_POWER_DESC;ÃÜÄ±Í¨¹ý»ñµÃÖ§³ÖÕßÀ´Ìá¸ß³É¹¦ÂÊ£¬¸ßÃÜÄ±Öµ»á½âËø¸ü¶àµÄÌØÊâÃÜÄ±¾öÒé¼°Ê±¼ä.ÈÃÄãµÄ¼äµýÖ÷¹ÜÔÚÄãµÄÃÜÄ±Ä¿±êµÄËùÔÚµØ½¨Á¢¼äµýÍø½«»á´ó´óÌá¸ßÄãµÄÃÜÄ±³É¹¦ÂÊ¡£;;;;;;;;;;X
-LIEGE_ENDED_OTHER_WAR_PARTICIPATION_LOG;§Y$VASSAL$§!²»ÔÙÊÇ§Y$VASSAL_WAR$§!µÄ²ÎÓëÕß£¬ÒòÎª$PRONOUN$·â¾ý§Y$LIEGE$§!×÷Îª§Y$SIDE$§!¼ÓÈëÁË§Y$LIEGE_WAR$§!¡£;;;;;;;;;;X
-LIEGE_ENDED_OTHER_WAR_LOG;§Y$VASSAL_WAR$§!½áÊøÁË£¬ÒòÎª§Y$LIEGE$§!×÷Îª§Y$SIDE$§!¼ÓÈëÁË§Y$LIEGE_WAR$§!¡£;;;;;;;;;;X
-NOT_ANY_WAR_STARTS;ÎÞÕ½Õù;;;;;;;;;;X
-not_under_attack;·Ç·ÀÓù·½;;;;;;;;;;X
-temple_king_pagan_group;¼ÀË¾Íõ;;;;;;;;;;X
-EVTTITLE_CM_1402;·´ÅÑ[From.PrimaryTitle.GetRulerTitle];;;;;;;;;;X
-EVTDESC_CM_1410;ÎÒµÄ[Root.GetLordLady]£¬ÅÑÍ½[From.GetTitledName]Ëº»ÙÁË[From.GetHerHis]ÅµÑÔ£¬¾Ü¾øÖ§Ô®Äã·´¿¹ÙÁÂíÑÇÍõ³¯£¡;;;;;;;;;;X
-TRIBAL_VASSAL_LEVY_CONTROL_ON;·â³¼²¿Âä½«»áÏòÄãÌá¹©³£±¸¾ü¡£\n;;;;;;;;;;X
-TRIBAL_VASSAL_LEVY_CONTROL_OFF;·â³¼²¿Âä½«»áÍ£Ö¹ÏòÄãÌá¹©³£±¸¾ü¡£\n;;;;;;;;;;X
-TRIBAL_VASSAL_TAX_INCOME_ON;·â³¼²¿Âä½«»áÏòÄãÉÏ½ÉË°½ð¡£\n;;;;;;;;;;X
-TRIBAL_VASSAL_TAX_INCOME_OFF;·â³¼²¿Âä½«»áÍ£Ö¹ÏòÄãÉÏ½ÉË°½ð¡£\n;;;;;;;;;;X
-LIEGE_TAX_TRIBAL;¶ÀÁ¢µÄ²¿Âä»òÓÎÄÁÁìÖ÷²»»á´ÓËûÃÇµÄ·â³¼ÄÇÊÕµ½Ë°½ð;;;;;;;;;;X
-CHRONICLE_WAR_WON; [From.GetTitledNameWithNick] ÔÚÕ½ÕùÖÐ»÷°ÜÁË [Root.GetTitledNameWithNick]¡£;;;;;;;;;;X
-CHRONICLE_WAR_WHITEPEACE; [From.GetTitledNameWithNick] Óë [Root.GetTitledNameWithNick] æÅºÍ¡£;;;;;;;;;;X
-CHRONICLE_WAR_LOST; [From.GetTitledNameWithNick] ÔÚÓë [Root.GetTitledNameWithNick] µÄÕ½ÕùÖÐÕ½°ÜÁË¡£;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+vice_royalty_2_desc;å»ºç«‹çŽ‹å›½åŠå…¬å›½æ€»ç£.;;;;;;;;;;x
+duke_vice_royalties;å…è®¸çŽ‹å›½åŠå…¬å›½æ€»ç£;;;;;;;;;;x
+PLOT_POWER_DESC;å¯†è°‹é€šè¿‡èŽ·å¾—æ”¯æŒè€…æ¥æé«˜æˆåŠŸçŽ‡,é«˜å¯†è°‹å€¼ä¼šè§£é”æ›´å¤šçš„ç‰¹æ®Šå¯†è°‹å†³è®®åŠæ—¶é—´.è®©ä½ çš„é—´è°ä¸»ç®¡åœ¨ä½ çš„å¯†è°‹ç›®æ ‡çš„æ‰€åœ¨åœ°å»ºç«‹é—´è°ç½‘å°†ä¼šå¤§å¤§æé«˜ä½ çš„å¯†è°‹æˆåŠŸçŽ‡.;;;;;;;;;;x
+LIEGE_ENDED_OTHER_WAR_PARTICIPATION_LOG;Â§Y$VASSAL$Â§!ä¸å†æ˜¯Â§Y$VASSAL_WAR$Â§!çš„å‚ä¸Žè€…ï¼Œå› ä¸º$PRONOUN$å°å›Â§Y$LIEGE$Â§!ä½œä¸ºÂ§Y$SIDE$Â§!åŠ å…¥äº†Â§Y$LIEGE_WAR$Â§!ã€‚;;;;;;;;;;x
+LIEGE_ENDED_OTHER_WAR_LOG;Â§Y$VASSAL_WAR$Â§!ç»“æŸäº†ï¼Œå› ä¸ºÂ§Y$LIEGE$Â§!ä½œä¸ºÂ§Y$SIDE$Â§!åŠ å…¥äº†Â§Y$LIEGE_WAR$Â§!ã€‚;;;;;;;;;;x
+NOT_ANY_WAR_STARTS;æ— æˆ˜äº‰;;;;;;;;;;x
+not_under_attack;éžé˜²å¾¡æ–¹;;;;;;;;;;x
+temple_king_pagan_group;çŽ‹å®¤ç‰§å¸ˆ;;;;;;;;;;x
+EVTTITLE_CM_1402;åå›[From.PrimaryTitle.GetRulerTitle];;;;;;;;;;x
+EVTDESC_CM_1410;æˆ‘çš„[Root.GetLordLady], å›å¾’[From.GetTitledName]æ’•æ¯äº† [From.GetHerHis]è¯ºè¨€,æ‹’ç»æ”¯æ´ä½ åæŠ—å€­é©¬äºšçŽ‹æœ!;;;;;;;;;;x
+TRIBAL_VASSAL_LEVY_CONTROL_ON;é™„åº¸éƒ¨è½å°†ä¼šå‘ä½ æä¾›å¸¸å¤‡å†›.\n;;;;;;;;;;x
+TRIBAL_VASSAL_LEVY_CONTROL_OFF;é™„åº¸éƒ¨è½å°†ä¼šåœæ­¢å‘ä½ æä¾›å¸¸å¤‡å†›.\n;;;;;;;;;;x
+TRIBAL_VASSAL_TAX_INCOME_ON;é™„åº¸éƒ¨è½å°†ä¼šå‘ä½ ä¸Šç¼´ç¨Žé‡‘.\n;;;;;;;;;;x
+TRIBAL_VASSAL_TAX_INCOME_OFF;é™„åº¸éƒ¨è½å°†ä¼šåœæ­¢å‘ä½ ä¸Šç¼´ç¨Žé‡‘.\n;;;;;;;;;;x
+LIEGE_TAX_TRIBAL;ç‹¬ç«‹çš„éƒ¨è½æˆ–æ¸¸ç‰§é¢†ä¸»ä¸ä¼šä»Žä»–ä»¬çš„å°è‡£é‚£æ”¶åˆ°ç¨Žé‡‘;;;;;;;;;;x
+CHRONICLE_WAR_WON;[From.GetTitledNameWithNick] åœ¨æˆ˜äº‰ä¸­å‡»è´¥äº† [Root.GetTitledNameWithNick].;;;;;;;;;;x
+CHRONICLE_WAR_WHITEPEACE;[From.GetTitledNameWithNick] ä¸Ž [Root.GetTitledNameWithNick]åª¾å’Œ.;;;;;;;;;;x
+CHRONICLE_WAR_LOST;[From.GetTitledNameWithNick] åœ¨ä¸Ž [Root.GetTitledNameWithNick]çš„æˆ˜äº‰ä¸­æˆ˜è´¥äº†.;;;;;;;;;;x
