--- a/localisation/v2_30f.csv
+++ b/localisation/v2_30f.csv
@@ -1,48 +1,49 @@
-RCLK_TO_SELECT;§Gµã»÷Êó±êÓÒ¼ü½øĞĞÑ¡Ôñ§!;;;;;;;;;;X
-vassal_sacrifice_decision;ÎşÉü;;;;;;;;;;X
-vassal_sacrifice_decision_named;Ï×¼À [Root.GetFirstName];;;;;;;;;;X
-break_up_with_lover_named;Óë [Root.GetFirstName] ·ÖÊÖ;;;;;;;;;;X
-seduce_decision_named;¹´Òı [Root.GetFirstName];;;;;;;;;;X
-decision_spy_on_named;¼àÊÓ [Root.GetFirstName];;;;;;;;;;X
-decision_break_free_named;´Ó¼àÓüÀï½â¾È [Root.GetFirstName];;;;;;;;;;X
-invite_to_party_named;ÑûÇë [Root.GetFirstName] ¸°Ñç;;;;;;;;;;X
-duel_decision_named;Óë [Root.GetFirstName] ¾ö¶·;;;;;;;;;;X
-legitimize_bastard;Ë½Éú×ÓºÏ·¨»¯;;;;;;;;;;X
-legitimize_bastard_named;Ê¹ [Root.GetTitledFirstName]³ÉÎªºÏ·¨×ÓÅ®;;;;;;;;;;X
-convince_to_straighten_up_named;È°Ëµ [Root.GetTitledFirstName]Õñ×÷ÆğÀ´;;;;;;;;;;X
-send_child_into_hiding;Òş²ØÆğÀ´;;;;;;;;;;X
-send_child_into_hiding_named;½«[Root.GetFirstName] Òş²ØÆğÀ´;;;;;;;;;;X
-take_child_out_of_hiding;ÖØ¼ûÌìÈÕ;;;;;;;;;;X
-take_child_out_of_hiding_named;Ê¹ [Root.GetFirstName]ÖØ¼ûÌìÈÕ;;;;;;;;;;X
-send_spouse_into_hiding;Òş²ØÆğÀ´;;;;;;;;;;X
-send_spouse_into_hiding_named;½« [Root.GetFirstName] Òş²ØÆğÀ´;;;;;;;;;;X
-take_spouse_out_of_hiding;ÖØ¼ûÌìÈÕ;;;;;;;;;;X
-take_spouse_out_of_hiding_named;Ê¹ [Root.GetFirstName] ÖØ¼ûÌìÈÕ;;;;;;;;;;X
-EVENT_SPAWNED;ÊÂ¼ş½á¹û;;;;;;;;;;X
-known_sodomite_pagan;ÈõÊÜÄĞÇéÈË;;;;;;;;;;X
-comfort_of_lover;ÇéÈËµÄ°²Î¿;;;;;;;;;;X
-desc_comfort_of_lover;[GetFirstName]ÔÚÇéÈËµÄ»³ÖĞµÃµ½°²Î¿,Ê¹ÆäÔİÊ±°ÚÍÑÁË [GetPossPronoun]³äÂúÕù³³µÄ»éÒöµÄÀ§ÈÅ.;;;;;;;;;;X
-thrill_of_lover;½û¶ÏÖ®°®µÄ¼¤Çé;;;;;;;;;;X
-opinion_dishonorable_duel;²»ÈÙÓşµÄ¾ö¶·;;;;;;;;;;X
-dishonorable_duel_tooltip;Õâ±»ÈÏÎªÊÇ²»ÈÙÓşµÄĞĞÎª,»áÒıÆğËûÈËµÄ·´¸Ğ.;;;;;;;;;;X
-desc_thrill_of_lover;[GetFirstName] Í¨¹ıÓë[GetPossPronoun] ÇéÈË×öÒ»Ğ©ĞßĞßµÄÊÂÇéÀ´´ÓÕù³³²»¶ÏµÄ»éÒöÖĞ»ñµÃÔİÊ±µÄ½âÍÑ.;;;;;;;;;;X
-CIW_GOTOLOCATION_DEL;À­½üÏÔÊ¾½ÇÉ«ÔÚµØÍ¼ÉÏµÄÎ»ÖÃ.;;;;;;;;;;X
-CIW_GOTOCHARREL_DEL;²é¿´ÆäËû½ÇÉ«¶Ô±¾½ÇÉ«µÄ¿´·¨.;;;;;;;;;;X
-CAN_CALL_VASSALS_TO_WAR;ÎÒÃÇËùÓĞµÄ·â³¼;;;;;;;;;;X
-IS_NOT_A_FOE_OF;²»ÊÇµĞÈË ;;;;;;;;;;X
-IS_A_FOE_OF;ÊÇµĞÈË ;;;;;;;;;;X
-nick_the_scholar;Ñ§Õß;;;;;;;;;;X
-nick_the_strange;¹ÖÒìÕß;;;;;;;;;;X
-nick_the_black;ºÚÈË;;;;;;;;;;X
-WayOfLifeDLC;Éú»îÖ®µÀ;;;;;;;;;;X
-IberianUnitPackDLC;ÒÁ±ÈÀûÑÇµ¥Î»°ü;;;;;;;;;;X
-IberianPortraitsDLC;ÒÁ±ÈÀûÑÇĞ¤Ïñ°ü;;;;;;;;;;X
-tut_0a_7b;ÌáÊ¾£ºÄã¿ÉÒÔÓÒ»÷½ÇÉ«Ğ¤ÏñÀ´´ò¿ª¸Ã½ÇÉ«µÄÍâ½»²Ëµ¥.;;;;;;;;;;X
-tut_4a_4;×÷Îª¿ªÊ¼,ÓÒ»÷ÄãµÄÍ¬¸¸ÒìÄ¸ĞÖµÜ,°¢Éª¶û²®¾ôÂíÄÂ¶û.Äã»á·¢ÏÖËı³öÏÖÔÚ¼Ò×å½çÃæµÄµ×¶Ë×ó²à,Î»ÓÚÖîÍ¬±²Ç×ÊôÖ®Ê×. (ÄãÔÚÕâÀï¿´µ½µÄĞ¤ÏñÖ»ÊÇÒ»¸öÀı×Ó,²¢²»ÊÇ´ú±íÊµ¼ÊÉÏµÄ²®¾ô.);;;;;;;;;;X
-tut_4a_5;ÔÚ×ó²à,ÎÒÃÇ¿ÉÒÔ¿´µ½¿ÉÖ´ĞĞÍâ½»ĞĞ¶¯µÄ²Ëµ¥.ÔÚÓÒ²àÄã½«¿ÉÒÔĞŞÕıÍâ½»Ñ¡Ôñ,²¢ÇÒ¿ÉÒÔ¿´µ½ÄãµÄÍâ½»Ñ¡Ôñ»áÔì³ÉÔõÑùµÄ½á¹û.µã»÷ÏÂÒ»²½¼ÌĞø.;;;;;;;;;;X
-tut_6a_12;ÏÖÔÚÊÇÕæÕıĞûÕ½µÄÊ±¿ÌÁË.ÄÇÃ´ÔÚ´ËÔÙ´Îµã»÷Søroyar.ÓÒ»÷Ğ¤ÏñÒÔ´ò¿ªÍâ½»²Ëµ¥.;;;;;;;;;;X
-tut_4c_9;ÉîË¼ÊìÂÇÒÔ²ÉÈ¡×îºÃµÄ¾ñÔñ,²»ÒªÍü¼Ç»éÒö¶ÔÏóËùÊôµÄÍõ³¯¼°ÆäÍ·ÏÎ»áÓ°ÏìÄãµÄÍşÍûÖµµÄµÃÊ§.µ±Äã×öºÃ¾ö¶¨ºó,ÓÒ»÷ËıµÄĞ¤ÏñÒÔ¼ÌĞø.;;;;;;;;;;X
-ca_culture_moors_2;Ä¦¶ûÆï±øÓª;;;;;;;;;;X
-ca_culture_moors_3;Ä¦¶ûÆï±øÓª;;;;;;;;;;X
-ca_culture_moors_4;Ä¦¶ûÆï±øÓª;;;;;;;;;;X
-TRIBAL_TAX_MODIFIER;²¿ÂäË°;;;;;;;;;;X
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+RCLK_TO_SELECT;Â§Gç‚¹å‡»é¼ æ ‡å³é”®è¿›è¡Œé€‰æ‹©Â§!;;;;;;;;;;x
+vassal_sacrifice_decision;ç‰ºç‰²;;;;;;;;;;x
+vassal_sacrifice_decision_named;çŒ®ç¥­ [Root.GetFirstName];;;;;;;;;;x
+break_up_with_lover_named;ä¸ [Root.GetFirstName] åˆ†æ‰‹;;;;;;;;;;x
+seduce_decision_named;å‹¾å¼• [Root.GetFirstName];;;;;;;;;;x
+decision_spy_on_named;ç›‘è§† [Root.GetFirstName];;;;;;;;;;x
+decision_break_free_named;ä»ç›‘ç‹±é‡Œè§£æ•‘ [Root.GetFirstName];;;;;;;;;;x
+invite_to_party_named;é‚€è¯· [Root.GetFirstName] èµ´å®´;;;;;;;;;;x
+duel_decision_named;ä¸ [Root.GetFirstName] å†³æ–—;;;;;;;;;;x
+legitimize_bastard;ç§ç”Ÿå­åˆæ³•åŒ–;;;;;;;;;;x
+legitimize_bastard_named;ä½¿ [Root.GetTitledFirstName]æˆä¸ºåˆæ³•å­å¥³;;;;;;;;;;x
+convince_to_straighten_up_named;åŠè¯´ [Root.GetTitledFirstName]æŒ¯ä½œèµ·æ¥;;;;;;;;;;x
+send_child_into_hiding;éšè—èµ·æ¥;;;;;;;;;;x
+send_child_into_hiding_named;å°†[Root.GetFirstName] éšè—èµ·æ¥;;;;;;;;;;x
+take_child_out_of_hiding;é‡è§å¤©æ—¥;;;;;;;;;;x
+take_child_out_of_hiding_named;ä½¿ [Root.GetFirstName]é‡è§å¤©æ—¥;;;;;;;;;;x
+send_spouse_into_hiding;éšè—èµ·æ¥;;;;;;;;;;x
+send_spouse_into_hiding_named;å°† [Root.GetFirstName] éšè—èµ·æ¥;;;;;;;;;;x
+take_spouse_out_of_hiding;é‡è§å¤©æ—¥;;;;;;;;;;x
+take_spouse_out_of_hiding_named;ä½¿ [Root.GetFirstName] é‡è§å¤©æ—¥;;;;;;;;;;x
+EVENT_SPAWNED;äº‹ä»¶ç»“æœ;;;;;;;;;;x
+known_sodomite_pagan;å¼±å—ç”·æƒ…äºº;;;;;;;;;;x
+comfort_of_lover;æƒ…äººçš„å®‰æ…°;;;;;;;;;;x
+desc_comfort_of_lover;[GetFirstName]åœ¨æƒ…äººçš„æ€€ä¸­å¾—åˆ°å®‰æ…°,ä½¿å…¶æš‚æ—¶æ‘†è„±äº† [GetPossPronoun]å……æ»¡äº‰åµçš„å©šå§»çš„å›°æ‰°.;;;;;;;;;;x
+thrill_of_lover;ç¦æ–­ä¹‹çˆ±çš„æ¿€æƒ…;;;;;;;;;;x
+opinion_dishonorable_duel;ä¸è¯šä¿¡çš„å†³æ–—;;;;;;;;;;x
+dishonorable_duel_tooltip;è¿™è¢«è®¤ä¸ºæ˜¯ä¸è¯šä¿¡çš„è¡Œä¸º,ä¼šå¼•èµ·ä»–äººçš„åæ„Ÿ.;;;;;;;;;;x
+desc_thrill_of_lover;[GetFirstName] é€šè¿‡ä¸[GetPossPronoun] æƒ…äººåšä¸€äº›ç¾ç¾çš„äº‹æƒ…æ¥ä»äº‰åµä¸æ–­çš„å©šå§»ä¸­è·å¾—æš‚æ—¶çš„è§£è„±.;;;;;;;;;;x
+CIW_GOTOLOCATION_DEL;æ‹‰è¿‘æ˜¾ç¤ºè§’è‰²åœ¨åœ°å›¾ä¸Šçš„ä½ç½®.;;;;;;;;;;x
+CIW_GOTOCHARREL_DEL;æŸ¥çœ‹å…¶ä»–è§’è‰²å¯¹æœ¬è§’è‰²çš„çœ‹æ³•.;;;;;;;;;;x
+CAN_CALL_VASSALS_TO_WAR;æˆ‘ä»¬æ‰€æœ‰çš„é™„åº¸;;;;;;;;;;x
+IS_NOT_A_FOE_OF;ä¸æ˜¯æ•Œäºº ;;;;;;;;;;x
+IS_A_FOE_OF;æ˜¯æ•Œäºº ;;;;;;;;;;x
+nick_the_scholar;å­¦è€…;;;;;;;;;;x
+nick_the_strange;æ€ªå¼‚è€…;;;;;;;;;;x
+nick_the_black;é»‘äºº;;;;;;;;;;x
+WayOfLifeDLC;ç”Ÿæ´»ä¹‹é“;;;;;;;;;;x
+IberianUnitPackDLC;ä¼Šæ¯”åˆ©äºšå•ä½åŒ…;;;;;;;;;;x
+IberianPortraitsDLC;ä¼Šæ¯”åˆ©äºšè‚–åƒåŒ…;;;;;;;;;;x
+tut_0a_7b;æç¤ºï¼šä½ å¯ä»¥å³å‡»è§’è‰²è‚–åƒæ¥æ‰“å¼€è¯¥è§’è‰²çš„å¤–äº¤èœå•.;;;;;;;;;;x
+tut_4a_4;ä½œä¸ºå¼€å§‹,å³å‡»ä½ çš„åŒçˆ¶å¼‚æ¯å…„å¼Ÿ,é˜¿ç‘Ÿå°”ä¼¯çˆµé©¬ç©†å°”.ä½ ä¼šå‘ç°å¥¹å‡ºç°åœ¨å®¶æ—ç•Œé¢çš„åº•ç«¯å·¦ä¾§,ä½äºè¯¸åŒè¾ˆäº²å±ä¹‹é¦–. (ä½ åœ¨è¿™é‡Œçœ‹åˆ°çš„è‚–åƒåªæ˜¯ä¸€ä¸ªä¾‹å­,å¹¶ä¸æ˜¯ä»£è¡¨å®é™…ä¸Šçš„ä¼¯çˆµ.);;;;;;;;;;x
+tut_4a_5;åœ¨å·¦ä¾§,æˆ‘ä»¬å¯ä»¥çœ‹åˆ°å¯æ‰§è¡Œå¤–äº¤è¡ŒåŠ¨çš„èœå•.åœ¨å³ä¾§ä½ å°†å¯ä»¥ä¿®æ­£å¤–äº¤é€‰æ‹©,å¹¶ä¸”å¯ä»¥çœ‹åˆ°ä½ çš„å¤–äº¤é€‰æ‹©ä¼šé€ æˆæ€æ ·çš„ç»“æœ.ç‚¹å‡»ä¸‹ä¸€æ­¥ç»§ç»­.;;;;;;;;;;x
+tut_6a_12;ç°åœ¨æ˜¯çœŸæ­£å®£æˆ˜çš„æ—¶åˆ»äº†.é‚£ä¹ˆåœ¨æ­¤å†æ¬¡ç‚¹å‡»Sé´•oyar.å³å‡»è‚–åƒä»¥æ‰“å¼€å¤–äº¤èœå•.;;;;;;;;;;x
+tut_4c_9;æ·±æ€ç†Ÿè™‘ä»¥é‡‡å–æœ€å¥½çš„æŠ‰æ‹©,ä¸è¦å¿˜è®°å©šå§»å¯¹è±¡æ‰€å±çš„ç‹æœåŠå…¶å¤´è¡”ä¼šå½±å“ä½ çš„å¨æœ›å€¼çš„å¾—å¤±.å½“ä½ åšå¥½å†³å®šå,å³å‡»å¥¹çš„è‚–åƒä»¥ç»§ç»­.;;;;;;;;;;x
+ca_culture_moors_2;æ‘©å°”éª‘å…µè¥;;;;;;;;;;x
+ca_culture_moors_3;æ‘©å°”éª‘å…µè¥;;;;;;;;;;x
+ca_culture_moors_4;æ‘©å°”éª‘å…µè¥;;;;;;;;;;x
+TRIBAL_TAX_MODIFIER;éƒ¨è½ç¨;;;;;;;;;;x
